Added missing cli commands to the pretty cli doc. The only one that's left (that I know of) is generate-dataset

--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -20,14 +20,17 @@ nav:
     - fidesctl CLI Overview: cli/cli.md
     - fidesctl Configuration File: cli/configuration-file
     - apply: cli/apply.md 
+    - delete: cli/delete.md 
     - evaluate: cli/evaluate.md 
     - get: cli/get.md 
     - init-db: cli/init-db.md
     - ls: cli/ls.md 
+    - parse: cli/parse.md
     - ping: cli/ping.md 
     - reset-db: cli/reset-db.md 
-    - version: cli/version.md 
     - view-config: cli/view-config.md
+    - webserver: cli/webserver.md
+
   - Development:
       - Overview: development/overview.md
       - Code Style: development/code_style.md
