Test: cli directory with styled man pages (#157)
* man

* cli commands

* removing dob property

* more cli commands

* more cli

* updates

* more

* more

* Added missing cli commands to the pretty cli doc. The only one that's left (that I know of) is generate-dataset

* resolving merge conflicts

Co-authored-by: douglas fulton <dfulton@ad1.systemadmin.com>
Co-authored-by: Kelly Huang <kelly@ethyca.com>

--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -29,7 +29,20 @@ nav:
         - Data Uses: language/taxonomy/data_uses.md
         - Data Subjects: language/taxonomy/data_subjects.md
         - Data Qualifiers: language/taxonomy/data_qualifiers.md
-  - CLI: cli.md
+  - CLI:
+    - fidesctl CLI Overview: cli/cli.md
+    - fidesctl Configuration File: cli/configuration-file
+    - apply: cli/apply.md
+    - delete: cli/delete.md
+    - evaluate: cli/evaluate.md
+    - get: cli/get.md
+    - init-db: cli/init-db.md
+    - ls: cli/ls.md
+    - parse: cli/parse.md
+    - ping: cli/ping.md
+    - reset-db: cli/reset-db.md
+    - view-config: cli/view-config.md
+    - webserver: cli/webserver.md
   - APIs: api/index.md
   - Development:
       - Overview: development/overview.md
