--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -81,6 +81,7 @@ extra_javascript:
 extra_css:
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/default.min.css
   - css/fides.css
+  - css/swagger_override.css
 
 plugins:
   - render_swagger
