--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -30,7 +30,7 @@ nav:
         - Data Subjects: language/taxonomy/data_subjects.md
         - Data Qualifiers: language/taxonomy/data_qualifiers.md
   - CLI: cli.md
-  - APIs: api/index.md
+  - API: api/index.md
   - Development:
       - Overview: development/overview.md
       - Code Style: development/code_style.md
