--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -95,6 +95,7 @@ extra_css:
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/default.min.css
   - css/fides.css
   - css/swagger_override.css
+  - css/cli.css
 
 plugins:
   - render_swagger
