Updates to SVG renders in dark mode and CSS adjustments to fix code window css

--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -76,6 +76,7 @@ theme:
   features:
     - navigation.top
     - navigation.instant
+  custom_dir: overrides
 
 markdown_extensions:
   - attr_list
