--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -31,7 +31,6 @@ nav:
         - Data Qualifiers: language/taxonomy/data_qualifiers.md
   - CLI:
     - CLI Overview: cli/cli.md
-    - Configuration File: cli/configuration-file
     - apply: cli/apply.md
     - delete: cli/delete.md
     - evaluate: cli/evaluate.md
@@ -43,7 +42,7 @@ nav:
     - reset-db: cli/reset-db.md
     - view-config: cli/view-config.md
     - webserver: cli/webserver.md
-  - APIs: api/index.md
+  - API: api/index.md
   - Development:
       - Overview: development/overview.md
       - Code Style: development/code_style.md
