Add evaluation of dataset references

--- a/fidesctl/tests/data/failing_taxonomy.yml
+++ b/fidesctl/tests/data/failing_taxonomy.yml
@@ -112,7 +112,7 @@ system:
         data_subjects:
           - customer
         dataset_references:
-          - test_db_dataset.Email
+          - test_db_dataset
     system_dependencies: []
 
 policy:
