Replace instances of identified_data and pseudonymized_data qualifiers with newer version

--- a/fidesctl/demo_resources/demo_policy.yml
+++ b/fidesctl/demo_resources/demo_policy.yml
@@ -18,5 +18,5 @@ policy:
           inclusion: ANY
           values:
             - customer
-        data_qualifier: identified_data
+        data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
         action: REJECT
