--- a/fidesctl/tests/data/failing_taxonomy.yml
+++ b/fidesctl/tests/data/failing_taxonomy.yml
@@ -54,10 +54,10 @@ data_use:
     name: Third Party Sharing
 
 data_qualifier:
-  - fides_key: identified_data
+  - fides_key: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
     name: Identified Data
 
-  - fides_key: pseudonymized_data
+  - fides_key: aggregated.anonymized.unlinked_pseudonymized.pseudonymized
     name: Pseudonymized Data
 
 dataset:
@@ -72,17 +72,17 @@ dataset:
             description: A First Name Field
             data_categories:
               - user.provided.identifiable.name
-            data_qualifier: identified_data
+            data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
           - name: Email
             description: User's Email
             data_categories:
               - user.provided.identifiable
-            data_qualifier: identified_data
+            data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
           - name: political_opinion
             description: User's political opinion
             data_categories:
               - user.provided.identifiable.political_opinion
-            data_qualifier: pseudonymized_data
+            data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized
 
 system:
   - fides_key: data_analytics_system
@@ -94,7 +94,7 @@ system:
         data_categories:
           - user.provided.identifiable
         data_use: provide.system
-        data_qualifier: pseudonymized_data
+        data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized
         data_subjects:
           - customer
     system_dependencies: [customer_data_sharing_system]
@@ -108,7 +108,7 @@ system:
         data_categories:
           - user.provided.identifiable.political_opinion
         data_use: third_party_sharing
-        data_qualifier: identified_data
+        data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
         data_subjects:
           - customer
         dataset_references:
@@ -136,7 +136,7 @@ policy:
           inclusion: ANY
           values:
             - customer
-        data_qualifier: identified_data
+        data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
         action: REJECT
 
       - fides_key: reject_sharing_political_opinions
@@ -155,5 +155,5 @@ policy:
           values:
             - customer
             - patient
-        data_qualifier: identified_data
+        data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
         action: REJECT
