--- a/fidesctl/demo_resources/demo_system.yml
+++ b/fidesctl/demo_resources/demo_system.yml
@@ -11,7 +11,7 @@ system:
         data_use: improve.system
         data_subjects:
           - customer
-        data_qualifier: identified_data
+        data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
         dataset_references:
           - demo_users_dataset
 
@@ -27,4 +27,4 @@ system:
         data_use: advertising
         data_subjects:
           - customer
-        data_qualifier: identified_data
+        data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
