--- a/fidesctl/fides_resources/policy.yml
+++ b/fidesctl/fides_resources/policy.yml
@@ -3,8 +3,7 @@ policy:
     name: Fidesctl Policy
     description: The main privacy policy for Fidesctl.
     rules:
-      - fides_key: reject_all_user_data
-        name: Reject Direct Marketing
+      - fides_key: reject_non_system_data
         description: Disallow any non-system data or uses.
         data_categories:
           inclusion: NONE
