Brenton interactive generate (#176)
* Basic Functionality in Place

* Added initial UI
* Added viz url getter
* Amended mysql table filter

* Update Visualize Endpoint

* Combined graphs into one html page and api endpoint
* Added associated testing
* TODO: currently only visualize default taxonomy, need to update to read all taxonomy from server

* Add Annotate CLI

* Added commentary for annotate-all
* Added annotate option to generate_dataset
* Added new cli command annotate_dataset

* Visualization for Default and Total Taxonomy

* Added functionality to support full taxonomy for visualization
* Added viz title change accordingly

* FTL

* Formatting
* Type Hinting
* Linting

* Minor bug fixes

* An attempt was made to satify Xenon but not sure that's going to happen

* Xenon fix for visualize

[ci-skip]

* Xenon and Pylint Fixes

* Added annotate to xenon ignore (no space between comma separated items, smh)
* Reduced complexity of visualization

* Fix Test

* Fix Skipping Bug

* refactor crud.py to use crud functions instead of embedding the logic directly into the endpoint function

* clean up the visualize logic now that crud.py is cleaned up

* make the generate_dataset function unaware of annotate_dataset function, move it to the CLI side instead

* add fideskey validation to the data categories

* pylint fixes

* Remove Default Flag for Visualizer

* Make Annotate Dataset Separate Command

[ci skip]

* User input validation

* Add option to validate user input data categories for both format and taxonomy compliance
* Fixed cli docstring to meet fastapi help expectations

[ci skip]

* updating cli documentation

* Input Validation Minor Fixes and FTL

* Added optional data category validation for annotating a dataset
* Removed viz hover text for tidiness
* Removed default taxonomy only option for resource viz
* Format, Type Hint, Lint

* Fix Tests

* Check-in Multiple Datasets


--- a/fidesctl/demo_resources/demo_dataset.yml
+++ b/fidesctl/demo_resources/demo_dataset.yml
@@ -1,34 +1,45 @@
 dataset:
-  - fides_key: demo_users_dataset
-    name: Demo Users Dataset
-    description: Data collected about users for our analytics system.
-    collections:
-      - name: users
-        description: User information
-        fields:
-          - name: first_name
-            description: User's first name
-            data_categories:
-              - user.provided.identifiable.name
-          - name: email
-            description: User's Email
-            data_categories:
-              - user.provided.identifiable.contact.email
-          - name: state
-            description: User's State
-            data_categories:
-              - user.provided.identifiable.contact.state
-          - name: food_preference
-            description: User's favorite food
-            data_categories:
-              - user.provided.nonidentifiable
-          - name: created_at
-            description: User's creation timestamp
-            data_categories:
-              - system.operations
-          - name: uuid
-            description: User's unique ID
-            data_categories:
-              - user.derived.identifiable.unique_id
-
-
+- fides_key: demo_users_dataset
+  organization_fides_key: default_organization
+  name: Demo Users Dataset
+  description: Data collected about users for our analytics system.
+  meta: null
+  data_categories: []
+  data_qualifiers:
+  - aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
+  collections:
+  - name: users
+    description: User information
+    data_categories: []
+    data_qualifiers:
+    - aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
+    fields:
+    - name: created_at
+      description: User's creation timestamp
+      data_categories:
+      - system.operations
+      data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
+    - name: email
+      description: User's Email
+      data_categories:
+      - user.provided.identifiable.contact.email
+      data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
+    - name: first_name
+      description: User's first name
+      data_categories:
+      - user.provided.identifiable.name
+      data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
+    - name: food_preference
+      description: User's favorite food
+      data_categories: []
+      data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
+    - name: state
+      description: User's State
+      data_categories:
+      - user.provided.identifiable.contact.state
+      data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
+    - name: uuid
+      description: User's unique ID
+      data_categories:
+      - user.derived.identifiable.unique_id
+      data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
