--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -29,8 +29,20 @@ nav:
         - Data Uses: language/taxonomy/data_uses.md
         - Data Subjects: language/taxonomy/data_subjects.md
         - Data Qualifiers: language/taxonomy/data_qualifiers.md
-  - CLI: cli.md
-  - APIs: api/index.md
+  - CLI:
+    - CLI Overview: cli/cli.md
+    - apply: cli/apply.md
+    - delete: cli/delete.md
+    - evaluate: cli/evaluate.md
+    - get: cli/get.md
+    - init-db: cli/init-db.md
+    - ls: cli/ls.md
+    - parse: cli/parse.md
+    - ping: cli/ping.md
+    - reset-db: cli/reset-db.md
+    - view-config: cli/view-config.md
+    - webserver: cli/webserver.md
+  - API: api/index.md
   - Development:
       - Overview: development/overview.md
       - Code Style: development/code_style.md
@@ -63,6 +75,7 @@ theme:
   features:
     - navigation.top
     - navigation.instant
+  custom_dir: overrides
 
 markdown_extensions:
   - attr_list
@@ -81,6 +94,9 @@ extra_javascript:
 extra_css:
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/default.min.css
   - css/fides.css
+  - css/api.css
+  - css/cli.css
+  - css/taxonomy.css
 
 plugins:
   - render_swagger
