Documentation, README, Branding, and links update (#7)
* updating docs, branding, and readme

* url update

* test update links

* updated with links that work

* replace SAR -> access

Co-authored-by: Dawn Pattison <pattisdr@users.noreply.github.com>
Co-authored-by: Sean Preston <sean@ethyca.com>

--- a/docs/fidesops/mkdocs.yml
+++ b/docs/fidesops/mkdocs.yml
@@ -51,7 +51,7 @@ theme:
         icon: material/toggle-switch
         name: Switch to light mode
   name: material
-  favicon: img/favicon.png
+  favicon: img/favicon.ico
   logo: img/fides-logo.svg
   font:
     text: Source Sans Pro
