Update Fidesops overview /w video & consistency (#19)
* Documentation updates and video additions

* Update Fidesops overview /w video & consistency

* Fix merge & update logo comment

Co-authored-by: Cillian Kieran <1268052+cilliankieran@users.noreply.github.com>

--- a/docs/fidesops/mkdocs.yml
+++ b/docs/fidesops/mkdocs.yml
@@ -52,7 +52,7 @@ theme:
         name: Switch to light mode
   name: material
   favicon: img/favicon.ico
-  logo: img/fides-logo.svg
+  logo: img/fidesops.svg
   font:
     text: Source Sans Pro
   features:
@@ -75,5 +75,6 @@ extra_css:
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/default.min.css
   - css/fides.css
   - css/api.css
+  - css/logo.css
 plugins:
   - render_swagger
