add the database adapters as extras, change the username of the default postgres user to "postgres" to avoid clogging the logs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
         target: /fides
         read_only: False
     env_file:
-      - env_files/fides.env
+      - env_files/fidesctl.env
 
   fidesctl-db:
     image: postgres:12
