--- a/env_files/db.env
+++ b/env_files/db.env
@@ -1,3 +1,3 @@
-POSTGRES_USER="fidesctl"
+POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="fidesctl"
-POSTGRES_DATABASE="fidesctl"
+POSTGRES_DB="fidesctl"
