--- a/fidesctl/Dockerfile
+++ b/fidesctl/Dockerfile
@@ -22,6 +22,6 @@ RUN pip install -r dev-requirements.txt
 # Copy in the application files and install it locally
 COPY . /fides/fidesctl
 WORKDIR /fides/fidesctl
-RUN pip install -e .
+RUN pip install -e ".[all]"
 
 CMD ["/bin/bash"]
