Fix Hot Reloading (#59)
* Whitelist .egg-info directory to keep the copy of fidesops on the host machine from overriding it, so when we do "make server" we can find the fidesops package.

* Remove redundant setting of WORKDIR.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
         source: ./
         target: /fidesops
         read_only: False
+      - /fidesops/src/fidesops.egg-info
 
   db:
     image: postgres:12
