--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -9,8 +9,8 @@ nav:
   - Installation:
       - Installation Overview: installation/installation.md
       - Prerequisites & Dependencies: installation/prerequisites_dependencies.md
-      - Installing from PyPI: installation/pypi.md
-      - Installing from Docker: installation/docker.md
+      - Installation from PyPI: installation/pypi.md
+      - Installation from Docker: installation/docker.md
       - Setting up the database: installation/database.md
   - Tutorial:
       - Overview: tutorial/index.md
@@ -39,6 +39,7 @@ nav:
           - Data Qualifiers: language/taxonomy/data_qualifiers.md
   - CLI:
       - CLI Overview: cli/cli.md
+      - annotate-dataset: cli/annotate-dataset.md
       - apply: cli/apply.md
       - delete: cli/delete.md
       - evaluate: cli/evaluate.md
