Automatically load the default taxonomy on fidesapi initialization
Removes the need for new users to run `fidesctl init-db` immediately
after loading a fresh CLI env with `make cli`.

Fidesapi now also loads the default taxonomy without requiring itself -
by interacting directly with the database to "upsert" the default
taxonomy's resources. Uses and `INSERT` + `ON CONFLICT...DO UPDATE`, to
simplify the process for systems that have previously loaded the
default taxonomy, or some other variation.

--- a/fidesctl/Dockerfile
+++ b/fidesctl/Dockerfile
@@ -24,4 +24,7 @@ COPY . /fides/fidesctl
 WORKDIR /fides/fidesctl
 RUN pip install -e ".[all]"
 
+# Immediately flush to stdout, globally
+ENV PYTHONUNBUFFERED=TRUE
+
 CMD ["/bin/bash"]
