Replace the deployment guide/getting started guides with a single Installation Guide (#200)
* Update the Getting Started to be for end-users

* update the PR page

* add the ci reference page and fill it out

* update the docker getting started to not use make

* update the getting started page to leverage only Docker, no compose or make

* fixed some links, updated navigation titles

* updat ethe ci_reference

* remove some stuff from the CLI section

* checkpoint, adding the installation stuff

* make small fixes, start updating the docker guide

* add the docker-compose file to the docker quick start

* finish the docker quickstart

* rewrite the manual installation guide

* fixed an error after the rebase

* make some suggested updates

* fix some casing

* Update docs/fides/docs/installation/installation.md

Co-authored-by: Robert Keyser <39230492+RobertKeyser@users.noreply.github.com>

* wording update

* fix some nits, remove the non-autogenerated API docs

Co-authored-by: Thomas La Piana <tal103020@icloud.com>
Co-authored-by: Robert Keyser <39230492+RobertKeyser@users.noreply.github.com>

--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -2,11 +2,17 @@ site_name: Fides
 site_url: https://ethyca.github.io/fides/
 nav:
   - What is Fides?: index.md
-  - Getting Started:
-      - Overview: getting_started/overview.md
-      - Fidesctl in Docker: getting_started/docker.md
-      - Fidesctl Manually (without Docker): getting_started/manual.md
-  - Installation: installation.md
+  - Quick Start:
+      - Overview: quickstart/overview.md
+      - Running Fidesctl locally: quickstart/local.md
+      - Running Fidesctl in Docker: quickstart/docker.md
+  - Installation:
+      - Installation Overview: installation/installation.md
+      - Prerequisites & Dependencies: installation/prerequisites_dependencies.md
+      - Installation from PyPI: installation/pypi.md
+      - Installation from Docker: installation/docker.md
+      - Setting up the database: installation/database.md
+      - Configuration: installation/configuration.md
   - Tutorial:
       - Overview: tutorial/index.md
       - Add Fidesctl to the App: tutorial/add.md
@@ -15,7 +21,7 @@ nav:
       - Write a Policy: tutorial/policy.md
       - Add Google Analytics: tutorial/google.md
       - Manage Google Analytics with Fidesctl: tutorial/pass.md
-  - Deployment Guide: deployment.md
+  - CI Reference: ci_reference.md
   - Fides Language:
       - Overview: language/overview.md
       - Syntax: language/syntax.md
@@ -34,6 +40,7 @@ nav:
           - Data Qualifiers: language/taxonomy/data_qualifiers.md
   - CLI:
       - CLI Overview: cli/cli.md
+      - annotate-dataset: cli/annotate-dataset.md
       - apply: cli/apply.md
       - delete: cli/delete.md
       - evaluate: cli/evaluate.md
