Add support for an Amazon Redshift and Snowflake ConnectionConfigs [#45][#44] (#56)
* Add support for an Amazon Redshift ConnectionConfig.

* Fix downgrade.

* Add support for a snowflake connection config.

* In downgrade, remove connectionconfigs of connection types snowflake/redshift.

* Black formatting.

* Typo.

* Make all params optional, because the url on ConnectionConfigSecretsSchema alone can be specified.

* Add integration tests for snowflake and redshift that look in fidesops-integration.toml files for URI's or environment variables gotten from github secrets.

* Exclude external integration tests from regular "make pytest"

* Try specifying environment variables for specific job.

* Try specifying env variables for a specific step.

* Add redshift and snowflake secrets schemas to docs.

* Try passing environment variables to container, pulling from current environment.

--- a/fidesops-integration.toml
+++ b/fidesops-integration.toml
@@ -18,3 +18,9 @@ USER="mysql_user"
 PASSWORD="mysql_pw"
 DB="mysql_example"
 PORT= 3306
+
+[redshift]
+external_uri=""
+
+[snowflake]
+external_uri=""
