--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,8 @@ services:
       timeout: 5s
       retries: 5
     volumes:
-      - postgres:/var/lib/postgresql/data
+      - ./init-postgres:/docker-entrypoint-initdb.d
+      - postgres:/var/lib/postgresql/datacreate-multiple-postgresql-databases.sh
     expose:
       - 5432
     ports:
